<resources>
    <string name="app_name">CodiLook</string>
    <string name="copyright">©2020 Koreatech C.E.O. Team</string>
    <string name="desc_menu_bar">메뉴바</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PW</string>
    <string name="prompt_password_confirm">PW 확인</string>
    <string name="prompt_edit_info">정보를 수정하시려면 입력해주세요.</string>
    <string name="prompt_edit_password">비밀번호를 변경하시려면 입력해주세요.</string>
    <string name="prompt_new_pass">새 PW</string>
    <string name="prompt_new_pass_confirm">새 PW 확인</string>
    <string name="prompt_bloodtype">혈액형</string>
    <string name="prompt_constellation">별자리</string>
    <string name="prompt_mbti">MBTI</string>
    <string name="check_duplicate">중복확인</string>
    <string name="link_mbti">검사링크</string>
    <string name="remember_me">로그인 유지</string>
    <string name="input_email_address">이메일 주소를 입력하세요.</string>
    <string name="invalid_email_format">유효하지 않은 이메일 형식입니다.</string>
    <string name="invalid_password_format">비밀번호는 최소 6자 이상이어야 합니다.</string>
    <string name="password_does_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="user_not_found">존재하지 않는 계정입니다.</string>
    <string name="user_already_exists">이미 존재하는 계정입니다.</string>
    <string name="wrong_password">잘못된 비밀번호 입니다.</string>
    <string name="unknown_error">알 수 없는 오류가 발생했습니다.</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="score"> 룩에 대한 별점을 남겨주세요 다음 코디에 반영될 수 있습니다.</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="recommend">LOOK 추천받기!!</string>
    <string name="desc_codi">코디</string>
    <string name="mbti_test">MBTI 검사를 받을 수 있는 링크로 이동하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="ok">확인</string>
    <string name="edit_user_info">회원 정보 수정</string>
    <string name="application_info">앱 정보</string>
    <string name="logout">로그아웃</string>
    <string name="action_settings">Settings</string>
    <string name="reference">참고 사이트</string>
    <string name="lbl_current_version">현재 버전</string>
    <string name="current_version">v1.0.0</string>
    <string name="lbl_latest_version">최신 버전</string>
    <string name="whats_new">업데이트 내역</string>
    <string name="my_info">내 정보</string>
    <string name="edit_confirm">수정하기</string>
    <string name="quit_confirm">탈퇴하기</string>
    <string name="progress_login">로그인 중…</string>
    <string name="progress_getting_info">사용자 정보 가져오는 중…</string>
    <string name="prompt_quit">정말 탈퇴하시겠습니까?</string>
    <string name="set_user_info">사용자 정보를 하나 이상 입력해주세요</string>
</resources>
