<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_user_info"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/edit_user_info" />
        <item
            android:id="@+id/nav_recommend"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/recommend" />
        <item
            android:id="@+id/nav_app_info"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/application_info" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout" />
    </group>
</menu>