<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/home_img_btn_prev"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/prev" />

        <ImageView
            android:id="@+id/home_img_codi"
            android:layout_width="0dp"
            android:layout_height="382dp"
            android:layout_weight="2"
            android:contentDescription="@string/desc_codi"
            android:src="@drawable/picture3" />

        <ImageView
            android:id="@+id/home_img_btn_next"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/next" />
    </LinearLayout>

    <Button
        android:id="@+id/home_btn_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/recommend"
        android:textColor="#E91E63"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:text="@string/copyright" />

</LinearLayout>

