<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appinfo.AppInfoActivity">

    <TextView
        android:id="@+id/app_info_tv_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_info_tv_lbl_current_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/lbl_current_version"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_info_tv_right" />

    <TextView
        android:id="@+id/app_info_tv_current_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_version"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@id/app_info_tv_lbl_current_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_info_tv_lbl_latest_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_latest_version"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_info_tv_lbl_current_version" />

    <TextView
        android:id="@+id/app_info_tv_latest_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@id/app_info_tv_lbl_latest_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/app_info_btn_update_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/whats_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_info_tv_lbl_latest_version" />

    <Button
        android:id="@+id/app_info_btn_reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference"
        app:layout_constraintBaseline_toBaselineOf="@+id/app_info_btn_update_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>