<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appinfo.AppInfoActivity">

    <ImageView
        android:id="@+id/my_info_img_title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <TextView
        android:id="@+id/my_info_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/my_info"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_img_title" />

    <TableLayout
        android:id="@+id/my_info_tl_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_tv_title">

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/my_info_et_email"
                android:text="@string/prompt_email"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/my_info_et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:autofillHints="email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/my_info_et_password"
                android:text="@string/prompt_password"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/my_info_et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/my_info_et_pw_confirm"
                android:text="@string/prompt_password_confirm"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/my_info_et_pw_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/my_info_sp_blood_type"
                android:text="@string/prompt_bloodtype"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/my_info_sp_blood_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:entries="@array/혈액형"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/my_info_sp_constellation"
                android:text="@string/prompt_constellation"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/my_info_sp_constellation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:entries="@array/별자리"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/my_info_sp_mbti"
                android:text="@string/prompt_mbti"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/my_info_sp_mbti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:entries="@array/mbti"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <Button
                android:id="@+id/my_info_btn_mbti_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/link_mbti"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/my_info_btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/edit_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_tl_form" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>