<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        android:textStyle="italic"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/IMG_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:srcCompat="@android:drawable/ic_menu_more"
        android:contentDescription="@string/prompt_menubar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/register"
        android:textColor="#FF9800"
        android:textSize="24sp"
        android:textStyle="italic"
        android:typeface="serif" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/TV_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@+id/ET_email"
                android:text="@string/prompt_email"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/ET_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:autofillHints="email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/TV_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/ET_password"
                android:text="@string/prompt_password"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/ET_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/TV_pw_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/ET_pw_confirm"
                android:text="@string/prompt_password_confirm"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/ET_pw_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/TV_bloodType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/SP_blood_type"
                android:text="@string/prompt_bloodtype"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/SP_blood_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:entries="@array/혈액형"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/TV_constellation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/SP_constellation"
                android:text="@string/prompt_constellation"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/SP_constellation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:entries="@array/별자리"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/TV_mbti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:labelFor="@id/SP_mbti"
                android:text="@string/prompt_mbti"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/SP_mbti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:entries="@array/mbti"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <Button
                android:id="@+id/BT_mbti_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/link_mbti"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/BT_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/register"
        android:textStyle="italic"
        android:typeface="serif" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:text="@string/copyright" />

</LinearLayout>