<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/prev_tv_codi_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/prev_img_codi"
            android:layout_width="0dp"
            android:layout_height="382dp"
            android:layout_weight="2"
            android:contentDescription="@string/desc_codi" />

        <ImageButton
            android:id="@+id/prev_img_btn_next"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/next"
            android:src="@android:drawable/ic_media_ff" />
    </LinearLayout>

    <TextView
        android:id="@+id/prev_tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:text="@string/score" />

    <RatingBar
        android:id="@+id/prev_rating_codi_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>
