<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        android:textStyle="italic"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/BTN_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/prompt_menubar"
        app:srcCompat="@android:drawable/ic_menu_more" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp">

            <TableRow android:gravity="center">

                <TextView
                    android:id="@+id/TV_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:labelFor="@+id/ET_email"
                    android:text="@string/prompt_email"
                    android:textSize="24sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/ET_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="email"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow android:gravity="center">

                <TextView
                    android:id="@+id/TV_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:labelFor="@+id/ET_password"
                    android:text="@string/prompt_password"
                    android:textSize="24sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/ET_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ems="10"
                    android:inputType="textPassword" />
            </TableRow>
        </TableLayout>

        <CheckBox
            android:id="@+id/CB_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="30dp"
            android:text="@string/remember_me"
            android:textSize="18sp"
            android:textStyle="italic"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/BT_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/login"
                android:textSize="24sp"
                android:textStyle="italic"
                android:typeface="serif"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/BT_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="24sp"
                android:textStyle="italic"
                android:typeface="serif"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9">

                <ImageView
                    android:id="@+id/IMG_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/picture1"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/IMG_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/picture2"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/copyright" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>